caipe/base/ai-platform-engineering/manifests/rag-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kb-rag-ingress
  namespace: ai-platform-engineering
  annotations:
    argocd.argoproj.io/sync-wave: "0"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: "nginx"
  rules:
    - host: rag-webui.cnoe.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rag-webui
                port:
                  number: 80
